# axum_admin

./: .env  .env.sample  .gitignore  .rustfmt.toml  Cargo.toml  README.md  README_EN.md  openapi.json
.cargo/: config  config.toml
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: api_doc.rs  lib.rs  route.rs
api/src/system/: common.rs  mod.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_update_log.rs  sys_user.rs  sys_user_online.rs
api/src/test/: mod.rs  test_data_scope.rs
app/: Cargo.toml
app/src/: api_doc.rs  lib.rs
app/src/apps/: mod.rs
app/src/apps/system/: api.rs  mod.rs
app/src/apps/system/api/: common.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_update_log.rs  sys_user.rs  sys_user_online.rs
app/src/apps/system/service/: common.rs  mod.rs  server_info.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_api.rs  sys_update_log.rs  sys_user.rs  sys_user_dept.rs  sys_user_online.rs  sys_user_role.rs
app/src/apps/test/: api.rs
app/src/apps/test/api/: test_data_scope.rs
app/src/apps/test/service/: test_data_scope.rs
app/src/middleware/: auth.rs  cache.rs  cache_skytable.rs  mod.rs  oper_log.rs
app/src/middleware_fn/: auth.rs  cache.rs  cache_skytable.rs  ctx.rs  mod.rs  oper_log.rs
app/src/tasks/: mod.rs  task_builder.rs  task_runner.rs
app/src/tasks/task/: system.rs  test_fn.rs
app/src/utils/: api_utils.rs  data_scope.rs  jwt.rs  mod.rs  web_utils.rs
config/: config.toml  config.toml.sample  regexes.yaml
config/casbin_conf/: rbac_policy.csv
configs/: Cargo.toml
configs/src/: cfgs.rs  get_config.rs  lib.rs
data/_web/: index.html
data/_web/assets/: 401-33d1dc72.js  401.5345f098.css  401.99070187.js  404-26f28fed.js  404-fef84184.js  404.2937e7c1.css  404.3352778e.js  500-886fe108.js  AboutView-368e68c0.js  Layout-da4d9225.js  Layout-e419b75b.css  app-language-9eaede31.js  app-settings-58b5dfd9.js  auth-26597bd6.js  auth-dialog-715b126d.js  auth-dialog.vue_vue_type_script_setup_true_name_menu-dialog_lang-c22d703f.js  auth.a81d675a.js  authRole.8ba3d518.js  authUser.c8863a4c.js  bug-2f74ebd1.js  bug.289e4316.js  build-c22cbcc4.js  button-2e6831c9.js  button.7286310d.js  cascader-c7692672.js  chart-1f70f2f1.js  checkbox-4f8ac7e9.js  checkbox.4187a614.js  (+230 more)
data/sqlite/: data.db  data.db-shm  data.db-wal
data/web/: index.html
db/: Cargo.toml
db/src/: db.rs  lib.rs
db/src/common/: captcha.rs  client.rs  ctx.rs  data_scope.rs  mod.rs  res.rs
db/src/system/: mod.rs  prelude.rs
db/src/system/entities/: casbin_rule.rs  mod.rs  prelude.rs  seaql_migrations.rs  sys_api_db.rs  sys_api_rule.rs  sys_config.rs  sys_db_version.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_model_info.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_api.rs  sys_role_dept.rs  sys_update_info.rs  sys_update_log.rs  sys_user.rs  sys_user_dept.rs  sys_user_online.rs  sys_user_post.rs  sys_user_role.rs  sys_web_set.rs
db/src/system/models/: mod.rs  server_info.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_api.rs  sys_update_log.rs  sys_user.rs  sys_user_online.rs
db/src/test/: mod.rs  prelude.rs
db/src/test/entities/: mod.rs  prelude.rs  test_data_scope.rs
db/src/test/models/: test_data_scope.rs
middleware-fn/: Cargo.toml
middleware-fn/src/: auth.rs  cache.rs  cache_skytable.rs  ctx.rs  lib.rs  oper_log.rs
migration/: Cargo.toml  README.md
migration/data/m20220101_000001_create_table/: obj_sys_api_db.sql  obj_sys_dept.sql  obj_sys_dict_data.sql  obj_sys_dict_type.sql  obj_sys_job.sql  obj_sys_menu.sql  obj_sys_post.sql  obj_sys_role.sql  obj_sys_role_api.sql  obj_sys_role_dept.sql  obj_sys_update_log.sql  obj_sys_user.sql  obj_sys_user_dept.sql  obj_sys_user_post.sql  obj_sys_user_role.sql  obj_test_data_scope.sql
migration/src/: db_utils.rs  lib.rs  m20220101_000001_create_table.rs  main.rs
migration/src/migrations/: m20220101_000001_create_table.rs  m20230403_000001_add_i18n.rs  mod.rs
poem-admin/: .gitignore  Cargo.toml
poem-admin/src/: main.rs
poem-admin/tests/: test__aa1.rs
sea_casbin_adapter/: Cargo.toml
sea_orm_casbin_adapter/: .env  Cargo.toml
sea_orm_casbin_adapter/src/: actions.rs  adapter.rs  error.rs  lib.rs  main.rs~~  models.rs  test.rs
sea_orm_casbin_adapter/tests/: mod.rs
service/: Cargo.toml
service/src/: lib.rs
service/src/service_utils/: api_utils.rs  jwt.rs  mod.rs  web_utils.rs
service/src/system/: common.rs  mod.rs  sys_api_db.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_menu.rs  sys_role.rs  sys_role_api.rs  sys_user.rs
service/src/tasks/: mod.rs  task.rs  task_builder.rs  task_runner.rs
service/src/tasks/task/: system.rs
service/src/test/: mod.rs  test_data_scope.rs
src/: apps.rs  config.rs  database.rs  env.rs  lib.rs  main.rs  middleware.rs  my_env.rs  resp.rs
src/apps/: mod.rs  system.rs  tt.rs
src/config/: cfgs.rs  mod.rs
src/database/: db.rs  migration.rs  mod.rs  setup.rs
src/db/: database.rs  mod.rs  setup.rs
src/middleware/: auth----aaa.rs  auth.rs  cache.rs  ctx.rs  ctx222.rs  log--test.rs  log-X.rs  mod.rs  oper_log.rs  poem_resp.rs  poem_tracer.rs  poem_tracer~~~.rs  tracing_log.rs
src/tasks/: mod.rs  task.rs  task_builder copy.rs  task_builder.rs  task_runner.rs  tasks.rs
src/tests/: mod.rs  scru128.rs
src/utils/: api_utils.rs  casbin.rs  casbin_service.rs  cert.rs  data_scope.rs  jwt--AA.rs  jwt.rs  mod.rs  web_utils.rs
tests/: mod.rs  scru128.rs  test__aa1.rs
utils/: Cargo.toml
utils/src/: cert.rs  lib.rs  my_env.rs  rand_utils.rs
(+272 files in other folders)
