

[workspace]
members = ["app", "bin", "configs", "db", "migration"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z" # Optimize for size.
panic = 'abort'
# strip = "symbols" # none(false) debuginfo symbols(true).
