[workspace]
members = [
  "bin",
  "api",
  "service",
  "middleware-fn",
  "utils",
  "configs",
  "db",
  "migration",
]
resolver = "2"


[workspace.package]
authors = ["lingdu <waong2005@126.com>"]
edition = "2021"
homepage = "https://314.iu1314.top"
license = "Apache-2.0"
publish = false
repository = ""
version = "0.1.0"
default-run = "axum-admin"

[workspace.dependencies]
# axum 
axum = "0"
axum-extra = "0"
# axum-server = "0"
hyper = "1"
http-body-util = "0"
mime = "0"
tower = "0"
tower-http = "0"
#
anyhow = "1"
bytes = "1"
futures = "0.3"

async-stream = "0.3"
chrono = "0"
headers = "0"
jsonwebtoken = "9"
once_cell = "1"
# 用于生成可排序的唯一id
scru128 = "3"
serde = "1"
serde_json = "1"
tokio = "1"
tokio-stream = '0'
#  "tracing"
toml = "0"
# tracing
time = "0"
tracing = "0"
tracing-appender = "0"
# tracing-log = "0.1"
tracing-subscriber = "0"

# 计划任务
delay_timer = "0"
reqwest = "0"
user-agent-parser = "0.3"

#  随机数
md5 = "0"
rand = "0"
# 系统信息
sysinfo = "0"
# 验证码
captcha_rust = "0"
# skyTable  可选依赖
skytable = "0"
# swagger openApi
# utoipa = "2"
# utoipa-swagger-ui = "2"

# sea-orm
sea-orm = "0"




[profile.release]
codegen-units = 1 
debug = false 
lto = true 
opt-level = "z" # Optimize for size.
panic = 'abort' 
# strip = "symbols" # none(false) debuginfo symbols(true).
