[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
app-service = {path = "../service"}
configs = {path = "../configs"}
db = {path = "../db"}
middleware-fn = {path = "../middleware-fn"}
#
axum = {workspace = true, default-features = false, features = ["multipart"]}
tower-http = {workspace = true, default-features = false}
#
futures = {workspace = true, default-features = false}
#
tokio-stream = {workspace = true, default-features = false}
#
serde_json = {workspace = true, default-features = false}
#
headers = {workspace = true, default-features = false}
#
tokio = {workspace = true, default-features = false}
#
anyhow = {workspace = true, default-features = false}
#
reqwest = {workspace = true, default-features = false, features = ["json"]}

#  openApi
utoipa = {workspace = true, default-features = false, features = ["axum_extras"]}
