[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
configs = {path = "../configs"}
db = {path = "../db"}
app-service = {path = "../service"}
middleware-fn = {path="../middleware-fn"}
# 
axum = {workspace = true, features = ["multipart"]}
tower-http = {workspace = true}
# 
futures = {workspace = true}
# 
tokio-stream = {workspace = true}
# 
serde_json = {workspace = true}
# 
headers = {workspace = true}
# 
tokio = {workspace = true}
#
anyhow = {workspace = true}
# 
reqwest = {workspace = true,  features = ["json"]}