[package]
edition = "2021"
name = "app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
configs = {path = "../configs"}
db = {path = "../db"}
#  axum
axum = {workspace = true, features = ["headers","multipart","original-uri"]}
hyper = { workspace = true,  features = ["full"] }
tower = { workspace = true,  features = ["util", "filter"] }
tower-http = {workspace = true,  features = ["cors","fs"]}
#
anyhow = {workspace = true}
bytes = {workspace = true}
futures = {workspace = true}
#
chrono = {workspace = true, features = ["serde"]}
headers = {workspace = true}
jsonwebtoken = {workspace = true}
once_cell = {workspace = true}
#
scru128 = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
tokio = {workspace = true, features = ["rt-multi-thread", "macros", "parking_lot", "signal", "time"]}
tokio-stream = {workspace = true}
#
toml = {workspace = true}
# tracing
time = {workspace = true}
tracing = {workspace = true}
tracing-appender = {workspace = true}
#
tracing-subscriber = {workspace = true, features = ["json", "env-filter", "local-time", "registry"]}

# 计划任务
delay_timer = {workspace = true}
reqwest = {workspace = true,  features = ["json"]}
user-agent-parser = {workspace = true}

#  随机数
md5 = {workspace = true}
rand = {workspace = true}
# 系统信息
sysinfo = {workspace = true}
# 验证码
captcha_rust ={workspace = true}
#  hashMap
ahash = {workspace = true}
# skyTable  可选依赖
skytable = {workspace = true, features = ["const-gen","aio"], default-features = false, optional = true}

#  openApi
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = {workspace = true, features = ["axum"] }

# sea-orm
sea-orm = {workspace = true, default-features = false,features = ["macros", "runtime-tokio-native-tls","debug-print"]}


[features]
# default = ["postgres", "mysql"]
default = ["postgres", "mysql", "sqlite", "cache-mem", "cache-skytable"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]
# app features
#  使用内存做缓存中间件
cache-mem = []
# 使用skytable 做缓存中间件
cache-skytable = ["skytable"]
