[package]
edition = "2021"
name = "configs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = {workspace = true,default-features =false}
serde = {workspace = true,default-features =false, features = ["derive"]}

toml = {workspace = true,default-features =false}
