[package]
name = "configs"
edition.workspace = true
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = {workspace = true }
serde = {workspace = true,features = ["derive"]}

toml = {workspace = true}
