[package]
edition = "2021"
name = "db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
configs = {path = "../configs"}
#
axum = {workspace = true}
mime = {workspace = true}
#
chrono = {workspace = true, features = ["serde"]}
once_cell = {workspace = true}
# regex = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
tokio = {workspace = true, features = ["rt-multi-thread", "macros", "parking_lot", "signal"]}
tracing = {workspace = true }

#  openApi
# utoipa = { workspace = true, features = ["axum_extras"] }

# sea-orm
sea-orm = {workspace = true, default-features = false,features = ["macros", "runtime-tokio-native-tls","with-chrono"]}

[features]
default = ["postgres", "mysql", "sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]