[package]
name = "middleware-fn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
configs = {path = "../configs"}
db = {path = "../db"}
app-service = {path = "../service"}

# poem 
axum = {workspace = true, features = ["headers","multipart","original-uri"]}
hyper = { workspace = true,  features = ["full"] }
# 
bytes = {workspace = true}
# 
tokio = {workspace = true, features = ["rt-multi-thread", "macros", "parking_lot", "signal", "time"]}
# 
chrono = {workspace = true, features = ["serde"]}
# 
tracing = {workspace = true}
# 用于生成可排序的唯一id
scru128 = {workspace = true}
# 
once_cell ={workspace = true}
# 
anyhow = {workspace = true}

# sea-orm
sea-orm = {workspace = true, default-features = false,features = ["macros", "runtime-tokio-native-tls","debug-print"]}

# skyTable  可选依赖
skytable = {workspace = true, features = ["const-gen","aio"], default-features = false, optional = true}

[features]
# default = ["postgres", "mysql"]
default = ["postgres", "mysql", "sqlite","cache-mem", "cache-skytable"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]

# app features
#  使用内存做缓存中间件
cache-mem = []
# 使用skytable 做缓存中间件
cache-skytable = ["skytable"]