[package]
edition = "2021"
name = "middleware-fn"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
app-service = {path = "../service"}
configs = {path = "../configs"}
db = {path = "../db"}

# poem 
axum = {workspace = true, default-features = false, features = ["headers", "original-uri"]}
hyper = {workspace = true, default-features = false}
# 
bytes = {workspace = true}
# 
tokio = {workspace = true, default-features = false}
# 
chrono = {workspace = true, default-features = false, features = ["serde"]}
# 
tracing = {workspace = true, default-features = false}
# 用于生成可排序的唯一id
scru128 = {workspace = true, default-features = false}
# 
once_cell = {workspace = true, default-features = false}
# 
anyhow = {workspace = true, default-features = false}

# sea-orm
sea-orm = {workspace = true, default-features = false, features = ["macros", "runtime-tokio-native-tls", "debug-print"]}

# skyTable  可选依赖
skytable = {workspace = true, default-features = false, features = ["const-gen", "aio"], optional = true}

[features]
# default = ["postgres", "mysql"]
default = ["postgres", "mysql", "sqlite", "cache-mem", "cache-skytable"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]

# app features
#  使用内存做缓存中间件
cache-mem = []
# 使用skytable 做缓存中间件
cache-skytable = ["skytable"]
