[package]
name = "middleware-fn"
edition.workspace = true
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
app-service = {path = "../service"}
configs = {path = "../configs"}
db = {path = "../db"}

# poem 
axum = {workspace = true, features = ["original-uri"]}
http-body-util = {workspace = true}
hyper = {workspace = true}
tower = {workspace = true, features = ["util", "filter"]}
# 
# bytes = {workspace = true}
# 
tokio = {workspace = true}
# 
chrono = {workspace = true, features = ["serde"]}
# 
tracing = {workspace = true}
# 用于生成可排序的唯一id
scru128 = {workspace = true}
# 
once_cell = {workspace = true}
# 
anyhow = {workspace = true}

# sea-orm
sea-orm = {workspace = true, features = ["macros", "runtime-tokio-native-tls", "debug-print"]}

# skyTable  可选依赖
skytable = {workspace = true, features = ["const-gen", "aio"], optional = true}

[features]
# default = ["postgres", "mysql"]
default = ["postgres", "mysql", "sqlite", "cache-mem", "cache-skytable"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]

# app features
#  使用内存做缓存中间件
cache-mem = []
# 使用skytable 做缓存中间件
cache-skytable = ["skytable"]
