[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
configs = {path = "../configs"}
db = {path = "../db"}
utils = {path = "../utils"}
#  axum
axum = {workspace = true}
hyper = { workspace = true}
tower = { workspace = true }
tower-http = {workspace = true}
#
anyhow = {workspace = true}
bytes = {workspace = true}
futures = {workspace = true}
# 
chrono = {workspace = true,  features = ["serde"]}
headers = {workspace = true}
jsonwebtoken = {workspace = true}
once_cell = {workspace = true}
# 
scru128 = {workspace = true}
serde = {workspace = true,  features = ["derive"]}
serde_json = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
#  
toml = {workspace = true}
# tracing
time = {workspace = true}
tracing = {workspace = true}
tracing-appender = {workspace = true}
# 
tracing-subscriber = {workspace = true,  features = ["json", "env-filter", "local-time", "registry"]}

# 计划任务
delay_timer = {workspace = true}
reqwest = {workspace = true,   features = ["json"]}
user-agent-parser = {workspace = true}

#  随机数
md5 = {workspace = true}
rand = {workspace = true}
# 系统信息
sysinfo = {workspace = true}
# 验证码
captcha_rust ={workspace = true}
# skyTable  可选依赖
skytable = {workspace = true, features = ["const-gen","aio"], optional = true}

#  openApi
# utoipa = { workspace = true, features = ["axum_extras"] }
# utoipa-swagger-ui = {workspace = true, features = ["axum"] }

# sea-orm
sea-orm = {workspace = true, features = ["macros", "runtime-tokio-native-tls","debug-print"]}


[features]
# default = ["postgres", "mysql"]
default = ["postgres", "mysql", "sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]
