[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
configs = {path = "../configs"}
db = {path = "../db"}
# 
once_cell ={workspace = true}
# 
tokio = {workspace = true}
# tracing
tracing = {workspace = true}
#
anyhow = {workspace = true}

#  随机数
md5 = {workspace = true}
rand = {workspace = true}

tracing-subscriber = {workspace = true}
time = {workspace = true}

# sea-orm
sea-orm = {workspace = true}